added footer section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
   </head>
@@ -68,32 +74,29 @@
         </div>
       </div>
     </section>
-    <!-- <section id="showPreview">
-      <div class="showPreview-nav">
-        <div class="showPreview-phone">
-          <div class="phone-box">
-            <img src="images/boxshot.png" alt="" />
-            <div class="">
-              Stranger Things <br />
-              <span>Downloading...</span>
-            </div>
-            <img
-              src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/download-icon.gif"
-              alt=""
-            />
-          </div>
-        </div>
-        <div class="showPreview-text">
-          <h1>Download your shows to watch offline</h1>
-          <h3>
-            Save your favorites easily and always have <br />
-            something to watch.
-          </h3>
-        </div>
-      </div>
-    </section>
-    <!-- https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/download-icon.gif -->
-    <section style="height: 100vh; background-color: black"></section>
-    -->
+    <footer>
+      <span><a href="">Questions? Contact us.</a></span>
+      <nav>
+        <ul>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Investor Relations</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Speed Test</a></li>
+          <li><a href="#">Help Center</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Cookie Preferences</a></li>
+          <li><a href="#">Legal Notices</a></li>
+          <li><a href="#">Account</a></li>
+          <li><a href="#">Ways to Watch</a></li>
+          <li><a href="#">Corporate Information</a></li>
+          <li><a href="#">Only on Netflix</a></li>
+          <li><a href="#">Media Center</a></li>
+          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </nav>
+      <button>English</button>
+      <span>Netflix Bangladesh</span>
+    </footer>
   </body>
 </html>
