--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
         <div class="hero-content">
           <h1>Unlimited movies, TV shows, and more</h1>
-          <h3>Watch anywhere. Cancel anytime.</h3>
+          <h3>Starts at USD 2.99. Cancel anytime.</h3>
           <p>
             <span>Ready to watch? Enter your email</span> to create or restart
             your <span>membership</span>.
