some text added in the footer section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </ul>
       </nav>
       <button>English</button>
-      <span>Netflix Bangladesh</span>
+      <span>Clone by Faiyaz Sarkar</span>
     </footer>
   </body>
 </html>
